--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>The Civilization Experiment</title>
     <link rel="stylesheet" type="text/css" href="Index.css" />
+    <script src="index.js" type="text/javascript"></script>
 </head>
 <body>
     <div id=pt1>
