Adding pt3 + a few optimizations
next to adding pt3, it's mainly changing the different headers to
classes instead of id's.

--- a/index.html
+++ b/index.html
@@ -15,17 +15,29 @@
         </div>
     </div>
     <div id=pt2>
-        <div id=header2>
+        <div id=header class=h2>
             <a id=title>What would you do</a>
         </div>
-        <div id=header3>
+        <div id=header class=h3>
             <a id=title>If you were put into a world</a>
         </div>
-        <div id=header4>
+        <div id=header class=h4>
             <a id=title>Where everyone was trying to make the world</a>
         </div>
-        <div id=header5>
+        <div id=header class=h5>
             <a id=title>Civilized?</a>
+        </div>
+    </div>
+    <div id=pt3>
+        <div id=header class=h6>
+            <a id=title>Welcome to the Civilization Experiment</a>
+        </div>
+        <div id=content>
+            <p id=title2>A nation-building Minecraft server</p>
+            <a href=# id=txt>Home Page &#8594;</a><br>
+            <a href=# id=txt>Subreddit &#8594;</a><br>
+            <a href=# id=txt>Map of the server &#8594;</a><br>
+            <a href=# id=txt>Map of nations &#8594;</a><br>
         </div>
     </div>
 </body>
