Uncommented code + sorted links

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
         <div id=content>
             <p id=title2>A nation-building Minecraft server</p>
             <a href=# id=txt>Home Page &#8594;</a><br>
-            <a href=# id=txt>Subreddit &#8594;</a><br>
+            <a href=# id=txt>Subreddit &#8594;</a><br><br>
             <a href=# id=txt>Map of the server &#8594;</a><br>
             <a href=# id=txt>Map of nations &#8594;</a><br>
+            <a href=# id=txt>List of Plugins &#8594;</a><br>
         </div>
     </div>
 </body>
