Making links work

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         </div>
         <div id=content>
             <p id=title2>A nation-building Minecraft server</p>
-            <a href=# id=txt>Subreddit &#8594;</a><br>
-            <a href=# id=txt>Map of the server &#8594;</a><br>
-            <a href=# id=txt>Map of nations &#8594;</a><br>
-            <a href=# id=txt>List of Plugins &#8594;</a><br>
+            <a href="http://reddit.com/r/CivilizatonExperiment" id=txt>Subreddit &#8594;</a><br>
+            <a href="http://civexmap.com/" id=txt>Map of the server &#8594;</a><br>
+            <a href="http://redd.it/36bwb8" id=txt>Map of nations &#8594;</a><br>
+            <a href="http://www.reddit.com/r/CivilizatonExperiment/wiki/plugins" id=txt>List of Plugins &#8594;</a><br>
+            <a href="http://www.reddit.com/r/CivilizatonExperiment/wiki/rules" id=txt>Rules &#8594;</a><br>
         </div>
     </div>
 </body>
