--- a/index.html
+++ b/index.html
@@ -7,39 +7,64 @@
 </head>
 <body>
     <div id=pt1>
-        <div id=header>
-            <a id=title>The Civilization Experiment</a>
+        <div id=header class=h6>
+            <a id=title>Welcome to the Civilization Experiment</a>
         </div>
+        <div id=content>
+            <p id=title2>A nation-building Minecraft server</p>
+            <p id=txt class=subtitle>
+                How would you react if you were put in a custom survival world, where everyone is trying to make the world civilized?
+            </p><br>
+            <table style="width: 100%">
+                <tr>
+                    <td id=txt class=feat>
+                        <span class="subtitle h1">Features:</span><br>
+                        &#x2714; Minecraft Version 1.8.7<br>
+                        &#x2714; Plugins like Citadel, PrisonPearl, RealWeather, and more<br>
+                        &#x2714; Better boats<br>
+                        &#x2714; Custom enchantments<br>
+                        &#x2714; Custom recipes<br>
+                        &#x2714; Dragons<br>
+                        &#x2714; Awesome community of over 800 players<br>
+                        &#x2714; Dedicated TeamSpeak 3 server<br>
+                    </td>
+                    <td id=txt class=info>
+                        <span class="subtitle h1">Info:</span><br>
+                        Server IP: <span class=ip>mc.civilizationexperiment.com</span><br>
+                        Test Server IP: <span class=ip>civex-1-8-7.mcph.co</span><br>
+                        TeamSpeak IP: <span class=ip>108.61.25.67:12847</span><br>
+                    </td>
+                    <td id=txt class=links>
+                        <span class="subtitle h1">Links:</span><br>
+                        <a href="http://reddit.com/r/CivilizatonExperiment" id=txt class=link>&#8592; Subreddit</a><br>
+                        <a href="http://civexmap.com/" id=txt class=link>&#8592; Map of the server</a><br>
+                        <a href="http://redd.it/36bwb8" id=txt class=link>&#8592; Map of nations</a><br>
+                        <a href="http://www.reddit.com/r/CivilizatonExperiment/wiki/plugins" id=txt class=link>&#8592; List of Plugins</a><br>
+                        <a href="http://www.reddit.com/r/CivilizatonExperiment/wiki/rules" id=txt class=link>&#8592; Rules</a><br>
+                    </td>
+                </tr>
+            </table><br>
+        </div>
+<!--
         <div id=scrolldown>
             <a id=sdtext>Scroll Down</a>
         </div>
+-->
     </div>
-    <div id=pt2>
-        <div id=header class=h2>
-            <a id=title>What would you do</a>
-        </div>
-        <div id=header class=h3>
-            <a id=title>If you were put into a world</a>
-        </div>
-        <div id=header class=h4>
-            <a id=title>Where everyone was trying to make the world</a>
-        </div>
-        <div id=header class=h5>
-            <a id=title>Civilized?</a>
-        </div>
-    </div>
+<!--
     <div id=pt3>
         <div id=header class=h6>
             <a id=title>Welcome to the Civilization Experiment</a>
         </div>
         <div id=content>
             <p id=title2>A nation-building Minecraft server</p>
-            <a href="http://reddit.com/r/CivilizatonExperiment" id=txt>Subreddit &#8594;</a><br>
-            <a href="http://civexmap.com/" id=txt>Map of the server &#8594;</a><br>
-            <a href="http://redd.it/36bwb8" id=txt>Map of nations &#8594;</a><br>
-            <a href="http://www.reddit.com/r/CivilizatonExperiment/wiki/plugins" id=txt>List of Plugins &#8594;</a><br>
-            <a href="http://www.reddit.com/r/CivilizatonExperiment/wiki/rules" id=txt>Rules &#8594;</a><br>
+            <a href="http://reddit.com/r/CivilizatonExperiment" id=txt class=link>Subreddit &#8594;</a><br>
+            <a href="http://civexmap.com/" id=txt class=link>Map of the server &#8594;</a><br>
+            <a href="http://redd.it/36bwb8" id=txt class=link>Map of nations &#8594;</a><br>
+            <a href="http://www.reddit.com/r/CivilizatonExperiment/wiki/plugins" id=txt class=link>List of Plugins &#8594;</a><br>
+            <a href="http://www.reddit.com/r/CivilizatonExperiment/wiki/rules" id=txt class=link>Rules &#8594;</a><br>
         </div>
     </div>
+-->
 </body>
 </html>
