--- a/old/index.html
+++ b/old/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>The Civilization Experiment</title>
-    <link rel="stylesheet" type="text/css" href="Index.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <script src="index.js" type="text/javascript"></script>
 </head>
 <body>
